Fixed demo issue on Firefox v2

--- a/demo/src/static/css/components/_board.scss
+++ b/demo/src/static/css/components/_board.scss
@@ -37,7 +37,7 @@
 
             @supports (-moz-appearance:none) {
                 & { 
-                    transform: translate(-50%, -50%);
+                    transform: translate(-50%, 0%);
                 } 
             }
         }
